welcome.lessons.welcome.bat.bool2.TeenSum.scala.error
teenSum:1: error: Missing closing brace `}' assumed here
def teenSum(a:Int, b:Int):Int = {
^